WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93926
[BlackBerry] Assertion failure in AppCacheGroup
https://bugs.webkit.org/show_bug.cgi?id=93926
Summary
[BlackBerry] Assertion failure in AppCacheGroup
George Staikos
Reported
2012-08-13 20:29:44 PDT
Program terminated with signal 11, Segmentation fault. #0 0x7ca01e26 in WebCore::mimeTypeFromDataURL (url=...) at webkit/Source/WebCore/platform/KURL.cpp:1916 1916 ASSERT(protocolIs(url, "data")); (gdb) where #0 0x7ca01e26 in WebCore::mimeTypeFromDataURL (url=...) at webkit/Source/WebCore/platform/KURL.cpp:1916 #1 0x7c905386 in WebCore::ApplicationCacheGroup::createResourceHandle (this=0x1d41100, url=..., newestCachedResource=0x0) at webkit/Source/WebCore/loader/appcache/ApplicationCacheGroup.cpp:513 In release mode this code should behave properly, so the fix is to just short circuit the data url decode if it isn't a data url.
Attachments
Patch to avoid the assertion failure
(1.58 KB, patch)
2012-08-13 20:33 PDT
,
George Staikos
rwlbuis
: review+
yong.li.webkit
: commit-queue-
Details
Formatted Diff
Diff
Updated patch
(1.62 KB, patch)
2012-08-14 07:40 PDT
,
George Staikos
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
One last try
(1.62 KB, patch)
2012-08-14 07:46 PDT
,
George Staikos
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from gce-cq-01
(361.66 KB, application/zip)
2012-08-14 09:29 PDT
,
WebKit Review Bot
no flags
Details
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
George Staikos
Comment 1
2012-08-13 20:33:30 PDT
Created
attachment 158197
[details]
Patch to avoid the assertion failure
Rob Buis
Comment 2
2012-08-14 07:15:03 PDT
Comment on
attachment 158197
[details]
Patch to avoid the assertion failure View in context:
https://bugs.webkit.org/attachment.cgi?id=158197&action=review
Looks good, but I think the ChangeLog needs to be cleaned up before landing.
> Source/WebCore/ChangeLog:5 > + change.
This seems to be the description part. I advise to stick to bug title here ("[BlackBerry] Assertion failure in AppCacheGroup") and move/merge above lines below Reviewed by.
George Staikos
Comment 3
2012-08-14 07:40:33 PDT
Created
attachment 158326
[details]
Updated patch
WebKit Review Bot
Comment 4
2012-08-14 07:42:13 PDT
Comment on
attachment 158326
[details]
Updated patch Rejecting
attachment 158326
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/13491620
George Staikos
Comment 5
2012-08-14 07:46:09 PDT
Created
attachment 158327
[details]
One last try Sigh. Save first, attach second. Repeat.
WebKit Review Bot
Comment 6
2012-08-14 09:29:28 PDT
Comment on
attachment 158327
[details]
One last try Rejecting
attachment 158327
[details]
from commit-queue. New failing tests: animations/suspend-resume-animation-events.html Full output:
http://queues.webkit.org/results/13501260
WebKit Review Bot
Comment 7
2012-08-14 09:29:31 PDT
Created
attachment 158345
[details]
Archive of layout-test-results from gce-cq-01 The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: gce-cq-01 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
WebKit Review Bot
Comment 8
2012-08-14 09:36:18 PDT
Comment on
attachment 158327
[details]
One last try Clearing flags on attachment: 158327 Committed
r125570
: <
http://trac.webkit.org/changeset/125570
>
WebKit Review Bot
Comment 9
2012-08-14 09:36:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug