[BlackBerry] Avoid assertion failure in App Cache. https://bugs.webkit.org/show_bug.cgi?id=93926

Reviewed by Rob Buis.

Short-circuit data url decoding if we know it's not a data URL to
avoid an assertion failure in debug mode.  No functional change.

No new tests since this is just a debug mode assertion failure.

* loader/appcache/ApplicationCacheGroup.cpp:
(WebCore::ApplicationCacheGroup::createResourceHandle):


Canonical link: https://commits.webkit.org/111838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125570 268f45cc-cd09-0410-ab3c-d52691b4dbfc